--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit
-sqlite3
-pandas
-PyMuPDF
-reportlab
-plotly-express
+streamlit==1.45.0
+pandas==2.2.2
+PyMuPDF==1.24.9
+reportlab==4.2.2
+plotly-express==0.4.1
